--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             </div>
             <h2>Strength</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-              eligendi voluptatibus cumque.
+              lorem ipsum is simply dummy text of the printing and typesetting
+              industry
             </p>
           </div>
           <div class="section-overview__item">
@@ -110,8 +110,8 @@
             </div>
             <h2>Dumbbells</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos
-              incidunt ad quibusdam?
+              lorem ipsum is simply dummy text of the printing and typesetting
+              industry
             </p>
           </div>
           <div class="section-overview__item">
@@ -126,8 +126,8 @@
             </div>
             <h2>Power Rack & Cages</h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id
-              doloremque esse officia.
+              lorem ipsum is simply dummy text of the printing and typesetting
+              industry
             </p>
           </div>
         </div>
@@ -153,13 +153,13 @@
           class="section-product__tab--link"
           onclick="openTab(event, 'tab3')"
         >
-          Most Review
+          Most Reviews
         </button>
       </div>
       <!-- Tab content -->
       <div id="tab1" class="tabcontent">
         <div class="tabcontent-card">
-          <div style="position: relative">
+          <div style="position: relative" class="tabcontent-card__item">
             <div class="tabcontent-card__img">
               <img
                 src="resources/images/aht-product-1.jpg"
@@ -185,15 +185,15 @@
           </div>
         </div>
         <div class="tabcontent-card">
-          <div style="position: relative">
+          <div style="position: relative" class="tabcontent-card__item">
             <div class="tabcontent-card__img">
               <img
                 src="resources/images/aht-product-2.jpg"
                 alt="aht-overview1"
               />
             </div>
-            <h3>Body champ cardio</h3>
-            <h2>$342.00</h2>
+            <h3>Body Solid GCEC340</h3>
+            <h2>$214.00</h2>
             <div class="tabcontent-card__action">
               <div class="tabcontent-card__action--icon">
                 <i class="fas fa-shopping-basket"></i>
@@ -211,15 +211,15 @@
           </div>
         </div>
         <div class="tabcontent-card">
-          <div style="position: relative">
+          <div style="position: relative" class="tabcontent-card__item">
             <div class="tabcontent-card__img">
               <img
                 src="resources/images/aht-product-3.jpg"
                 alt="aht-overview1"
               />
             </div>
-            <h3>Body champ cardio</h3>
-            <h2>$342.00</h2>
+            <h3>Bowflex BXE116 Elliptical</h3>
+            <h2>$421.0</h2>
             <div class="tabcontent-card__action">
               <div class="tabcontent-card__action--icon">
                 <i class="fas fa-shopping-basket"></i>
@@ -237,93 +237,15 @@
           </div>
         </div>
         <div class="tabcontent-card">
-          <div style="position: relative">
-            <div class="tabcontent-card__img">
-              <img
-                src="resources/images/aht-product-4.jpg"
-                alt="aht-overview1"
-              />
-            </div>
-            <h3>Body champ cardio</h3>
-            <h2>$342.00</h2>
-            <div class="tabcontent-card__action">
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-shopping-basket"></i>
-              </div>
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-eye"></i>
-              </div>
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-heart"></i>
-              </div>
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-exchange-alt"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tabcontent-card">
-          <div style="position: relative">
-            <div class="tabcontent-card__img">
-              <img
-                src="resources/images/ath-product-5.jpg"
-                alt="aht-overview1"
-              />
-            </div>
-            <h3>Body champ cardio</h3>
-            <h2>$342.00</h2>
-            <div class="tabcontent-card__action">
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-shopping-basket"></i>
-              </div>
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-eye"></i>
-              </div>
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-heart"></i>
-              </div>
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-exchange-alt"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tabcontent-card">
-          <div style="position: relative">
-            <div class="tabcontent-card__img">
-              <img
-                src="resources/images/aht-product-6.jpg"
-                alt="aht-overview1"
-              />
-            </div>
-            <h3>Body champ cardio</h3>
-            <h2>$342.00</h2>
-            <div class="tabcontent-card__action">
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-shopping-basket"></i>
-              </div>
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-eye"></i>
-              </div>
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-heart"></i>
-              </div>
-              <div class="tabcontent-card__action--icon">
-                <i class="fas fa-exchange-alt"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tabcontent-card">
-          <div style="position: relative">
+          <div style="position: relative" class="tabcontent-card__item">
             <div class="tabcontent-card__img">
               <img
                 src="resources/images/aht-product-7.jpg"
                 alt="aht-overview1"
               />
             </div>
-            <h3>Body champ cardio</h3>
-            <h2>$342.00</h2>
+            <h3>ETHOS GHD</h3>
+            <h2>$152.00</h2>
             <div class="tabcontent-card__action">
               <div class="tabcontent-card__action--icon">
                 <i class="fas fa-shopping-basket"></i>
@@ -341,6 +263,112 @@
           </div>
         </div>
         <div class="tabcontent-card">
+          <div style="position: relative" class="tabcontent-card__item">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-4.jpg"
+                alt="aht-overview1"
+              />
+            </div>
+            <h3>AFG Pro 7.2AI Incline</h3>
+            <h2>$252.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tabcontent-card">
+          <div style="position: relative" class="tabcontent-card__item">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/ath-product-5.jpg"
+                alt="aht-overview1"
+              />
+            </div>
+            <h3>Weight Bench</h3>
+            <h2>$412.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tabcontent-card">
+          <div style="position: relative" class="tabcontent-card__item">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-6.jpg"
+                alt="aht-overview1"
+              />
+            </div>
+            <h3>ProForm Hiit Trainer Lite 5.9</h3>
+            <h2>$300.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tabcontent-card">
+          <div style="position: relative" class="tabcontent-card__item">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-8.jpg"
+                alt="aht-overview1"
+              />
+            </div>
+            <h3>Fitness Gear Pro</h3>
+            <h2>$124.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="tab2" class="tabcontent">
+        <div class="tabcontent-card" class="tabcontent-card__item">
           <div style="position: relative">
             <div class="tabcontent-card__img">
               <img
@@ -366,91 +394,83 @@
             </div>
           </div>
         </div>
-      </div>
-      <div id="tab2" class="tabcontent">
         <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-1.jpg" alt="aht-overview1" />
-          </div>
-          <h3>Body champ cardio</h3>
-          <h2>$342.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
+          <div style="position: relative" class="tabcontent-card__item">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-8.jpg"
+                alt="aht-overview1"
+              />
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
-            </div>
-          </div>
-        </div>
-        <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-8.jpg" alt="aht-overview1" />
-          </div>
-          <h3>Fitness Gear Pro</h3>
-          <h2>$123.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div id="tab3" class="tabcontent">
         <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/ath-product-5.jpg" alt="aht-overview1" />
-          </div>
-          <h3>Weight Bench</h3>
-          <h2>$412.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
+          <div style="position: relative" class="tabcontent-card__item">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-8.jpg"
+                alt="aht-overview1"
+              />
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
             </div>
           </div>
         </div>
         <div class="tabcontent-card">
-          <div class="tabcontent-card__img">
-            <img src="resources/images/aht-product-2.jpg" alt="aht-overview1" />
-          </div>
-          <h3>Body Solid GCEC340</h3>
-          <h2>$214.00</h2>
-          <div class="tabcontent-card__action">
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-shopping-basket"></i>
+          <div style="position: relative" class="tabcontent-card__item">
+            <div class="tabcontent-card__img">
+              <img
+                src="resources/images/aht-product-8.jpg"
+                alt="aht-overview1"
+              />
             </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-eye"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="tabcontent-card__action--icon">
-              <i class="fas fa-exchange-alt"></i>
+            <h3>Body champ cardio</h3>
+            <h2>$342.00</h2>
+            <div class="tabcontent-card__action">
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-shopping-basket"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-eye"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-heart"></i>
+              </div>
+              <div class="tabcontent-card__action--icon">
+                <i class="fas fa-exchange-alt"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -470,8 +490,8 @@
             />
           </div>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
-            aut inventore esse culpa itaque numquam harum! Consequuntur?
+            “Good services. I bought a bicycle with a wrong but they accepted free return for me <br>
+            and exchange a new product for me.“
           </p>
           <h2>Tuyen tran</h2>
           <p>Happy clients</p>
@@ -485,9 +505,8 @@
             />
           </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
-            debitis doloremque error maiores autem sed animi dolor a
-            consectetur! Rerum fugiat repellat modi!
+            “Good services. I bought a bicycle with a wrong but they accepted free return for me <br>
+            and exchange a new product for me.“
           </p>
           <h2>Vu Thien</h2>
           <p>Happy clients</p>
@@ -501,10 +520,9 @@
             />
           </div>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            facilis modi iusto voluptate explicabo.
+            “Good services. I bought a bicycle with a wrong but they accepted free return for me <br>
+            and exchange a new product for me.“
           </p>
-
           <h2>Phung Anh</h2>
           <p>Happy clients</p>
         </div>
@@ -550,10 +568,7 @@
           <img src="resources/images/Logo-big.PNG" alt="aht-overview1" />
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corrupti
-          nihil velit incidunt repudiandae <br />
-          officiis deserunt quibusdam qui blanditiis quos atque reiciendis neque
-          .
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the <br>industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
         </p>
 
         <div class="footer-top__soical">
