--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </label>
       <div id="sidebarMenu">
         <ul class="sidebarMenuInner">
-          <li><a href="">Home</a></li>
+          <li><a href="">Homes</a></li>
           <li><a href="">Pages</a></li>
           <li><a href="">Classes</a></li>
           <li><a href="">Portfolio</a></li>
